--- a/day14/css/01.scss
+++ b/day14/css/01.scss
@@ -20,7 +20,7 @@ a{
     .zfb-header{
         width: 100%;
         height: 180px;
-        background: #3f454f;
+        background: #fff;
         display: flex;
         flex-direction: column;
 
