--- a/day14/css/01.css
+++ b/day14/css/01.css
@@ -25,7 +25,7 @@ a {
 #zhifubao .zfb-header {
   width: 100%;
   height: 180px;
-  background: #3f454f;
+  background: #fff;
   display: flex;
   flex-direction: column;
 }
